Fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ body {
     position: relative;
     width: 100%;
     height: 100%;
+    overflow: scroll;
   }
 
 @media screen and (max-width: 500px) {
